# fast-api-python

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 96a2c5c92059_initial_migration.py  c1b60374404d_initial_migration.py
db/: Dockerfile  compose.yml  init-mongo.js  scripts.py
src/: __init__.py  main.py  metadata.py
src/configs/: settings.py
src/configs/database/: database.py
src/configs/logging/: error_handlers.py  log_config.py
src/posts/: models.py  router.py
