[project]
name = "MyFastAPIProject"
version = "0.2.0"
description = "Blueprint FastAPI project with MongoDB and Pydantic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "pymongo>=4.12.0",
    "starlette>=0.46.1",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
]
