[project]
name = "MyFastAPIProject"
version = "0.2.0"
description = "Blueprint FastAPI project with MongoDB and Pydantic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "class-based-fastapi>=1.1.0",
    "fastapi>=0.115.12",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "pymongo>=4.12.0",
    "sqlalchemy>=2.0.40",
    "starlette>=0.46.1",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
]
